fixed issues with dialog boxes not showing in report

--- a/www/src/app/css/report.styl
+++ b/www/src/app/css/report.styl
@@ -467,7 +467,6 @@ low = #78c1dc
 // 	height 21px
 // 	width 20px
 .gfw .total-area-info-popup
-	visibility hidden
 	width 450px
 	box-shadow 0px 0px 6px 1px rgba(0,0,0,0.25)
 	background-color #fff
